add modal, basic parser, fix printing styles

--- a/src/components/DataTable/styles.scss
+++ b/src/components/DataTable/styles.scss
@@ -25,10 +25,33 @@
     color: #212529;
     background-color: rgba(0, 0, 0, 0.02);
   }
+
+  .custom-control {
+    width: 20px;
+    padding-left: initial;
+    display: inline-block;
+  }
+
+  .custom-control-label::before,
+  .custom-control-label::after {
+    left: 0.4rem;
+    top: 0.1rem;
+    width: 1.25rem;
+    height: 1.25rem;
+  }
 }
 
-@media print{
+@media print {
   .data-table {
+    tbody > tr > td {
+      padding: 0.15rem 0.75rem !important;
+    }
+
+    tbody > tr > td,
+    thead > tr > th {
+      border-color: #a0a0a0 !important;
+    }
+
     &__row {
       &--hidden {
         display: none;
@@ -42,4 +65,3 @@
     }
   }
 }
-
