--- a/src/styles.scss
+++ b/src/styles.scss
@@ -24,8 +24,17 @@ body {
 }
 
 @media print{
-  html {
-    font-size: 50%;
+  body {
+    font: 9.5pt Georgia, "Times New Roman", Times, serif;
+    line-height: 1.3;
+  }
+
+  @page {
+    margin: 0 2cm;
+  }
+
+  .table {
+    color: #000 !important;
   }
 
   .media-print {
@@ -34,5 +43,9 @@ body {
 
   .media-desktop {
     display: none;
+  }
+
+  .footer {
+    position: static;
   }
 }
