--- a/scss/main.scss
+++ b/scss/main.scss
@@ -17,4 +17,5 @@
 @import '~bootstrap/scss/buttons';
 @import '~bootstrap/scss/forms';
 @import '~bootstrap/scss/modal';
+@import '~bootstrap/scss/close';
 @import '~bootstrap/scss/tables';
